--- a/templates/Cam.html
+++ b/templates/Cam.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Camera</title>
-    <link rel="stylesheet" type="text/css" href="/static/camerastyle.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
             <img src="{{ url_for('static', filename='images/logo web-modified.png') }}" alt="Logo">
         </div>
         <div class="header-content">
-            <h1>SỔ TAY SINH VIÊN ĐIỆN TỬ</h1>
+            <h1>Sổ Tay Sinh Viên Điện Tử</h1>
         </div>
         <div>
             <div id="header">
@@ -24,15 +24,17 @@
                     <ul id="main-menu">
                         <li><a href="http://127.0.0.1:5500">Home</a></li>
                         <li><a href="http://127.0.0.1:5500/Gioithieu">Introduction</a></li>
+                        <li><a href="http://127.0.0.1:5500/News">News</a></li>
+                        <li><a href="http://127.0.0.1:5500/history">Information</a></li>
                         <li><a href="">Feature</a>
-                              <ul class="sub-menu">
-                              <li><a href="http://127.0.0.1:5500/camera">CAMERA</a></li>
-                              <li><a href="http://127.0.0.1:5500/use_video">USE VIDEO</a></li>
-                              <li><a href="http://127.0.0.1:5500/video">UPLOAD VIDEO</a></li>
-                              <li><a href="http://127.0.0.1:5500/upload_img">UPLOAD IMAGE</a></li>
-                              <li><a href= "http://127.0.0.1:5500/webcam">CAMERA DETECTION</a></li>
-                          </ul>  
+                            <ul class="sub-menu">
+                                <li><a href="http://127.0.0.1:5500/use_video">CAMERA</a></li>
+                                <li><a href="http://127.0.0.1:5500/video">UPLOAD VIDEO</a></li>
+                                <li><a href="http://127.0.0.1:5500/upload_img">UPLOAD IMAGE</a></li>
+                                <li><a href= "http://127.0.0.1:5500/webcam">CAMERA DETECTION</a></li>
+                            </ul>    
                       </li>
+                      <li><a href="http://127.0.0.1:5500/News">Tin Tức</a></li>
                       <li><a href="">Contact</a>
                             <ul class="sub-menu">
                             <li><a href="">0918193133</a></li>      
@@ -48,7 +50,8 @@
             <div class="controls">
                 <button id="capture-button">
                     <i class="fas fa-camera fa-2x"></i></button>
-                <button id="record-button">Quay Video
+                <button id="record-button">
+                    <i class="fas fa-video fa-2x"></i>
                 </button>
                
             </div>
