--- a/templates/Gioithieu.html
+++ b/templates/Gioithieu.html
@@ -209,22 +209,23 @@
                         <img src="{{ url_for('static', filename='images/plants-clipart-logo-4.png') }}" alt="ảnh logo" id="logo-img">
                     </a>
                     <ul id="main-menu">
-                      <li><a href="http://127.0.0.1:5500">Home</a></li>
-                      <li><a href="http://127.0.0.1:5500/Gioithieu">Introduction</a></li>
-                      <li><a href="">Feature</a>
-                                  <ul class="sub-menu">
-                                  <li><a href="http://127.0.0.1:5500/camera">CAMERA</a></li>
-                                  <li><a href="http://127.0.0.1:5500/use_video">USE VIDEO</a></li>
-                                  <li><a href="http://127.0.0.1:5500/video">UPLOAD VIDEO</a></li>
-                                  <li><a href="http://127.0.0.1:5500/upload_img">UPLOAD IMAGE</a></li>
-                                  <li><a href= "http://127.0.0.1:5500/webcam">CAMERA DETECTION</a></li>
-                              </ul>  
-                      </li>
-                      <li><a href="">Contact</a>
+                        <li><a href="http://127.0.0.1:5500">Home</a></li>
+                        <li><a href="http://127.0.0.1:5500/Gioithieu">Introduction</a></li>
+                        <li><a href="http://127.0.0.1:5500/News">News</a></li>
+                        <li><a href="http://127.0.0.1:5500/history">Information</a></li>
+                        <li><a href="">Feature</a>
                             <ul class="sub-menu">
-                            <li><a href="">0918193133</a></li>  
-                      </li>
-                    </ul>
+                                <li><a href="http://127.0.0.1:5500/use_video">CAMERA</a></li>
+                                <li><a href="http://127.0.0.1:5500/video">UPLOAD VIDEO</a></li>
+                                <li><a href="http://127.0.0.1:5500/upload_img">UPLOAD IMAGE</a></li>
+                                <li><a href= "http://127.0.0.1:5500/webcam">CAMERA DETECTION</a></li>
+                            </ul>      
+                        </li>
+                        <li><a href="">Contact</a>
+                              <ul class="sub-menu">
+                              <li><a href="">0918193133</a></li>      
+                        </li>
+                      </ul>
                 </nav>
             </div>
         </div>
